cluster/core/longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        # backend:
        #   service:
        #     name: longhorn-frontend
        #     port:
        #       number: 80
  tls:
  - hosts:
    - "longhorn.${SECRET_DOMAIN}"
    secretName: "longhorn.${SECRET_DOMAIN}-tls"
#   annotations:
#     # type of authentication
#     nginx.ingress.kubernetes.io/auth-type: basic
#     # prevent the controller from redirecting (308) to HTTPS
#     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
#     # name of the secret that contains the user/password definitions
#     nginx.ingress.kubernetes.io/auth-secret: basic-auth
#     # message to display with an appropriate context why the authentication is required
#     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
# spec:
#   rules:
#   - host: "longhorn.${SECRET_DOMAIN}"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: longhorn-frontend
#             port:
#               number: 80
